[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://scenes/StartScreen.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Game" type="Node"]
script = ExtResource( 3 )
mob_scene = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
color = Color( 0.0901961, 0.654902, 0.878431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 360 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 360 )
[connection signal="easy_game" from="StartScreen" to="Player" method="_on_StartScreen_easy_game"]
[connection signal="easy_game" from="StartScreen" to="." method="_on_StartScreen_easy_game"]
[connection signal="hard_game" from="StartScreen" to="Player" method="_on_StartScreen_hard_game"]
[connection signal="hard_game" from="StartScreen" to="." method="_on_StartScreen_hard_game"]
[connection signal="medium_game" from="StartScreen" to="Player" method="_on_StartScreen_medium_game"]
[connection signal="medium_game" from="StartScreen" to="." method="_on_StartScreen_medium_game"]
[connection signal="new_game" from="StartScreen" to="." method="new_game"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
